log
Thu 21 Mar 2024 01:17:09 AM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:6: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |      push_back(L, valor);
      |      ^~~~~~~~~
      |      pushBack
cc1: all warnings being treated as errors
Compilation failed
a008f35
Thu 21 Mar 2024 01:17:19 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
7bae982
Thu 21 Mar 2024 03:51:47 AM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
4a32657
Thu 21 Mar 2024 03:55:03 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
ec1e66d
Thu 21 Mar 2024 04:02:04 AM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
c2b6689
Thu 21 Mar 2024 04:02:44 AM UTC: 
 exercises.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:99:10: error: unused variable ‘pila_aux’ [-Werror=unused-variable]
   99 |   Stack* pila_aux = create_stack();
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d9817b8
Thu 21 Mar 2024 04:02:49 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|2
total_score: 40/70
19319ea
Thu 21 Mar 2024 08:05:41 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
b0f95de
Thu 21 Mar 2024 08:14:14 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
8a841dc
Thu 21 Mar 2024 08:28:28 PM UTC: 
 exercises.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:129:13: error: unused variable ‘primero’ [-Werror=unused-variable]
  129 |       char* primero = top(pila);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dd3c9d0
Thu 21 Mar 2024 08:28:38 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|1
total_score: 60/70
8756c72
Thu 21 Mar 2024 08:30:37 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
716e808
Thu 21 Mar 2024 08:33:13 PM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
c501624
Thu 21 Mar 2024 08:37:49 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  4|1
total_score: 50/70
8a91919
Thu 21 Mar 2024 08:38:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
8de2cc2
Thu 21 Mar 2024 08:39:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
8a8f3af
Thu 21 Mar 2024 08:48:38 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  4|1
total_score: 50/70
17271be
Thu 21 Mar 2024 08:49:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:130:24: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  130 |       if (signo == ')' && *primero == '(' || (signo == ']' && *primero == '[') || (signo == '}' && *primero == '{')) {
      |           ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
73d28f4
Thu 21 Mar 2024 08:49:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
954a27c
Thu 21 Mar 2024 08:59:14 PM UTC: 
 exercises.c | 24 +++++++-----------------
 1 file changed, 7 insertions(+), 17 deletions(-)
 tests:  9|0
total_score: 70/70
c8f30e9
Thu 21 Mar 2024 09:10:52 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  9|0
total_score: 70/70
9c9a03d
